syntax = "proto3";
package messages;
import "google/protobuf/timestamp.proto";
import "google/protobuf/descriptor.proto";

message RegistrationCredentials {
    string email = 1;
    string password = 2;
    string hostname = 3;
    bytes public_key = 4;
}

message SignedMetrics {
    bytes signature = 1;
    repeated Metrics metrics = 2;
}

message Metrics {
    string name = 1;
    double value = 2;
    repeated MetricsAttribute attributes = 3;
}

message MetricsAttribute {
    string name = 1;
    string value = 2;
}

message SignedLogs {
    bytes signature =  1;
    string logs = 2;
}

message SignedNodeData {
    bytes signature = 1;
    NodeData node_data = 2;
}

message NodeData {
    bytes operator_id = 1;
    string avs_name = 2;
    string avs_version = 3;
    bool active_set = 4;
}

message SignedDeleteNodeData {
    bytes signature = 1;
    bytes operator_id = 2;
    string avs_name = 3;
}
